AC_INIT(basket , 0.1, 21250406@student.uwl.ac.uk)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/])
AM_CONFIG_HEADER([src/config.h])

AC_DEFINE([PROGNAME],["basket"],["Basket of e-commerce"])
# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs , structures , and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC

# things to generate
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
